@@ -1,4 +1,4 @@
-Copyright (c) 2014-2015, Pascal Nançoz
+﻿Copyright (c) 2014-2018, Pascal Nançoz
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
