@@ -13,7 +13,8 @@ class ZBPlayableItem(ZBDirectoryItem):
 	Title2 = None
 
 	def __init__(self, host, args, title, image, title2):
-		super(ZBPlayableItem, self).__init__(host, args, title, image)
+		extendedTitle = title if title2 is None or title2 == '' else '%s (%s)' % (title, title2)
+		super(ZBPlayableItem, self).__init__(host, args, extendedTitle, image)
 		self.Title2 = title2
 
 	def get_listItem(self):
